#163 Fix problem with transparent trip segments on mobile

--- a/frontend/styles/modules/_result_segments.scss
+++ b/frontend/styles/modules/_result_segments.scss
@@ -9,6 +9,7 @@
   .trip-segments-container {
     top: 1.5em;
     left: -1.5em;
+    background-color: $c-white;
   }
 
   .trip-segments {
